--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <article class="company-details">
             <h2>Company Details</h2>
             <div class="table-container">
-                <table>
+                <table border="1">
                     <tr>
                         <th>Address</th>
                         <td>5678 Fashion St, Trendy City, Fashionland</td>
